src/recipe/snapshots/rattler_build__recipe__parser__tests__duplicate_keys_error.snap
---
source: src/recipe/parser.rs
expression: err
---
  × Failed to parse recipe

Error: 
  × failed to parse YAML: duplicate key.
   ╭─[8:1]
 7 │ 
 8 │ build:
   · ──┬──
   ·   ╰── duplicate key here
 9 │   string: "1234"
   ╰────
